--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -23,8 +23,13 @@
                 </li>
             </ul>
         </div>
-    </div>
-    <div class="hero"></div>
+    </header>
+
+    <section>
+        <div class="hero"></div>
+    </section>
+    
+    <section>
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
@@ -48,6 +53,8 @@
             </p>
         </div>
     </div>
+</section>
+<aside>
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -71,12 +78,13 @@
             </p>
         </div>
     </div>
-    <div class="footer">
+</aside>
+    <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2023 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
