--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
     <header class="header">
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <h1>Hori<span class="mid-header">seo</span>n</h1>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,15 +22,15 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
+        </nav>
     </header>
 
-    <section>
-        <div class="hero"></div>
-    </section>
+
+        <section class="hero"></section>
+
     
-    <section>
-    <div class="content">
+
+    <div class="category">
         <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -53,8 +53,8 @@
             </p>
         </div>
     </div>
-</section>
-<aside>
+
+
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
@@ -78,7 +78,7 @@
             </p>
         </div>
     </div>
-</aside>
+
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
